--- a/GradeOne/Boyejo-Racheal.html
+++ b/GradeOne/Boyejo-Racheal.html
@@ -201,7 +201,7 @@
                      <h3>Results</h3>
                      <p>Click read more to see results</p>
                   </div>
-                  <a class="read_more" href="Boyejo-Racheal.html">Read More</a>
+                  <a class="read_more" href="Boyejo-Racheal-Result.html">Read More</a>
                </div>
                <div class="col-md-4 margi_bottom">
                   <div class="class_box blue text_align_center">
