--- a/PreSchool/Agbejoye-Ayanfe-Result.html
+++ b/PreSchool/Agbejoye-Ayanfe-Result.html
@@ -97,6 +97,7 @@
                      <h2> Pre School </h2>
 
                      <table>
+                        <p>Mid-Term Test Results (First Term)</p>
                     <tr>
                       <th>No. &nbsp</th>
                        
