--- a/GradeOne/Adefiranye-Mofetoluwa-Result.html
+++ b/GradeOne/Adefiranye-Mofetoluwa-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Adefiranye Mofetoluwa</h2><br>
                      <h2> Grade One </h2>
 
-                     <table>
+                     <table style="width:100%">
                     <p>2023/2024 Academic Session 1st Term</p>
                     <tr>
                       
