--- a/GradeOne/Adefiranye-Mofetoluwa-Result.html
+++ b/GradeOne/Adefiranye-Mofetoluwa-Result.html
@@ -99,18 +99,18 @@
                        
                       <th>English &nbsp &nbsp</th>
                        
-                      <th>Mathmatics &nbsp &nbsp</th>
+                      <th>Maths &nbsp &nbsp</th>
 
                       <th>Science &nbsp &nbsp</th>
 
-                      <th>G. Paper &nbsp &nbsp</th>
+                      <th>G.Paper &nbsp &nbsp</th>
 
-                      <th>Verbal Reasoning &nbsp &nbsp</th>
-                      <th>Quantitative Reasoning &nbsp &nbsp</th>
+                      <th>V.Reasoning &nbsp &nbsp</th>
+                      <th>Q.Reasoning &nbsp &nbsp</th>
                       <th>CRS &nbsp</th>
                       <th>Creative Arts &nbsp &nbsp</th>
                       <th>Story Writing &nbsp &nbsp</th>
-                      <th>M. Science &nbsp &nbsp</th>
+                      <th>M.Science &nbsp &nbsp</th>
                       <th>French &nbsp &nbsp</th>
                       <th>Computer &nbsp &nbsp</th> 
                       <th>Yoruba &nbsp &nbsp</th>
