--- a/GradeFive/Akintunde-Esan-Ifechi.html
+++ b/GradeFive/Akintunde-Esan-Ifechi.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Akintunde-Esan <br> Ifechi's<br> Portal
+                                             Akintade-Esan <br> Ife's<br> Portal
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href="">Akintunde-Esan Ifechi<span></span></a>
+                                             <a class="read_more" href="">Akintade-Esan Ife<span></span></a>
                                           </div>
                                        </div>
                                     </div>
