--- a/GradeOne/Awotade-Cedar-Result.html
+++ b/GradeOne/Awotade-Cedar-Result.html
@@ -129,7 +129,7 @@
                                             <table>
                                                <h1></h1>
                                                <tr>
-                                                 <th colspan="13">2023/2024 Academic Session 1st Term</th>
+                                                 <th colspan="13">Cognitive Ability - 2023/2024 Academic Session 1st Term</th>
                                                  <th rowspan="2"></th>
                                                  <th rowspan="2"></th>
                                                </tr>
