--- a/GradeOne/Awotade-Cedar-Result.html
+++ b/GradeOne/Awotade-Cedar-Result.html
@@ -93,7 +93,7 @@
                      <h2> Grade One </h2>
 
                        <table>
-                        <p>Continuous Assessment Scores for Term 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term................ </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
