--- a/GradeOne/Awotade-Cedar-Result.html
+++ b/GradeOne/Awotade-Cedar-Result.html
@@ -253,7 +253,7 @@
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
-                                                  <td>Marks Obtainable</td>
+                                                  <td>Marks Obtainabed</td>
                                                   
                                                   <td>Final Result</td>
                                                 </tr>
