--- a/GradeOne/Akinlabi-Akindesire-Result.html
+++ b/GradeOne/Akinlabi-Akindesire-Result.html
@@ -130,7 +130,7 @@
                                             <table>
                                                <h1></h1>
                                                <tr>
-                                                 <th colspan="13">2023/2024 Academic Session 1st Term</th>
+                                                 <th colspan="13">Cognitive Skill</th>
                                                  <th rowspan="2"></th>
                                                  <th rowspan="2"></th>
                                                </tr>
@@ -138,13 +138,13 @@
                                                 <th>English &nbsp;</th>
                                                    <th>Mathematics &nbsp;</th>
                                                    <th>Science &nbsp;</th>
-                                                   <th>G. Paper &nbsp;</th>
+                                                   <th>General Paper &nbsp;</th>
                                                    <th>Verbal Reasoning &nbsp;</th>
                                                    <th>Quantitative Reasoning &nbsp;</th>
                                                    <th>CRS &nbsp;</th>
                                                    <th>Creative Arts &nbsp;</th>
                                                    <th>Story Writing &nbsp;</th>
-                                                   <th>M. Science &nbsp;</th>
+                                                   <th>MontessoriScience &nbsp;</th>
                                                    <th>French &nbsp;</th>
                                                    <th>Computer &nbsp;</th>
                                                    <th>Yoruba &nbsp;</th>
@@ -258,40 +258,7 @@
                                                   
                                                   <td>Final Result</td>
                                                 </tr>
-                                                <tr>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td>Class Average</td>                           
-                                                </tr>
-                                                <tr>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td></td>
-                                                  <td>Position</td>                           
-                                                </tr>
+                                                                                            
                                                 <tr>
                                                   <td></td>
                                                   <td></td>
