--- a/GradeTwo/Animashaun-Valentino-Result.html
+++ b/GradeTwo/Animashaun-Valentino-Result.html
@@ -135,13 +135,13 @@
                            <th>English &nbsp;</th>
                            <th>Mathematics &nbsp;</th>
                            <th>Science &nbsp;</th>
-                           <th>G. Paper &nbsp;</th>
+                           <th>General Paper &nbsp;</th>
                            <th>Verbal Reasoning &nbsp;</th>
                            <th>Quantitative Reasoning &nbsp;</th>
                            <th>CRS &nbsp;</th>
                            <th>Creative Arts &nbsp;</th>
                            <th>Story Writing &nbsp;</th>
-                           <th>M. Science &nbsp;</th>
+                           <th>Montessori Science &nbsp;</th>
                            <th>French &nbsp;</th>
                            <th>Computer &nbsp;</th>
                            <th>Yoruba &nbsp;</th>
@@ -254,40 +254,7 @@
                           
                           <td>Final Result</td>
                         </tr>
-                        <tr>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td>Class Average</td>                           
-                        </tr>
-                        <tr>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td>Position</td>                           
-                        </tr>
+                     
                         <tr>
                           <td></td>
                           <td></td>
