--- a/GradeThree/Aikhionbare-Obaloluwa-Result.html
+++ b/GradeThree/Aikhionbare-Obaloluwa-Result.html
@@ -87,12 +87,11 @@
          <div class="container-fluid">
             <div class="row d_flex d_grid">
                
-               </div>
                <div class="col-md-5 order_1_mobile">
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Obasa Omolola</h2><br>
+                     <h2>Result for <br>Aikhionbare Obaloluwa</h2><br>
                      <h2> Grade Three </h2>
                      <table>
                         <p>Continuous Assessment Scores for Term  ..................... </p>
@@ -130,14 +129,13 @@
 
                        <!-- Result Table-->
 
-
-                  <table>
-                     <h1></h1>
-                     <tr>
-                       <th colspan="13">Cognitive Skill</th>
-                       <th rowspan="2"></th>
-                       <th rowspan="2"></th>
-                     </tr>
+                     <table>
+                        <h1></h1>
+                        <tr>
+                          <th colspan="13">Cognitive Skill</th>
+                          <th rowspan="2"></th>
+                          <th rowspan="2"></th>
+                        </tr>
                          <tr>
                            <th>English &nbsp;</th>
                            <th>Mathematics &nbsp;</th>
@@ -172,19 +170,19 @@
                            <td>1st Half</td>
                          </tr>
                          <tr>
-                           <td>80</td>
+                           <td>86</td>
+                           <td>95</td>
+                           <td>88</td>
                            <td>85</td>
-                           <td>80</td>
-                           <td>75</td>
-                           <td>97</td>
-                           <td>70</td>
+                           <td>91</td>
+                           <td>85</td>
                            <td>70</td>
                            <td>-</td>
                            <td>-</td>
-                           <td>87</td>
+                           <td>96</td>
                            <td>100</td>
-                           <td>77</td>
-                           <td>85</td>
+                           <td>80</td>
+                           <td>76</td>
                            <td>Marks Obtained</td>
                            
                            <td>1st Half</td>
