--- a/GradeFour/Adeosun-Phillip-Result.html
+++ b/GradeFour/Adeosun-Phillip-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Itoto Darasimi</h2><br>
+                     <h2>Result for <br>Adeosun Philip</h2><br>
                      <h2> Grade Four </h2>
                      <table>
                         <p>Continuous Assessment Scores for Term  ..................... </p>
@@ -129,12 +129,12 @@
 
                        <!-- Result Table-->
 
-                     <table>
-                        <tr>
-                           <th colspan="13">Cognitive Skill</th>
-                           <th rowspan="2"></th>
-                           <th rowspan="2"></th>
-                         </tr>
+                    <table>
+                     <tr>
+                        <th colspan="13">Cognitive Skill</th>
+                        <th rowspan="2"></th>
+                        <th rowspan="2"></th>
+                      </tr>
                          <tr>
                            <th>English &nbsp;</th>
                            <th>Mathematics &nbsp;</th>
@@ -169,20 +169,20 @@
                            <td>1st Half</td>
                          </tr>
                          <tr>
-                           <td>70</td>
-                           <td>60</td>
-                           <td>60</td>
-                           <td>60</td>
-                           <td>78</td>
+                           <td>85</td>
+                           <td>80</td>
+                           <td>95</td>
+                           <td>85</td>
+                           <td>90</td>
                            <td>-</td>
                            <td>60</td>
+                           <td>65</td>
+                           <td>78</td>
+                           <td>75</td>
+                           <td>75</td>
+                           <td>88</td>
                            <td>70</td>
-                           <td>73</td>
-                           <td>50</td>
-                           <td>60</td>
-                           <td>63</td>
-                           <td>60</td>
-                           <td>Marks Obtained</td>
+                           <td>Marks Obtainable</td>
                            
                            <td>1st Half</td>
                            
