--- a/GradeTwo/Adeniba-Temiloluwa-Result.html
+++ b/GradeTwo/Adeniba-Temiloluwa-Result.html
@@ -257,20 +257,20 @@
                         </tr>
                         
                         <tr>
+                          <td>Average</td>
+                          <td>Good</td>
+                          <td>Average</td>
+                          <td>Fair</td>
+                          <td>Good</td>
+                          <td>Average</td>
+                          <td>Fair</td>
                           <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td>Good</td>
+                          <td>Good</td>
+                          <td>Average</td>
+                          <td>Fair</td>
+                          <td>Good</td>
+                          <td>Fair</td>
                           <td>Teachers Remarks</td>                           
                         </tr>
                      
