--- a/GradeOne/Adefiranye-Mofetoluwa-Result.html
+++ b/GradeOne/Adefiranye-Mofetoluwa-Result.html
@@ -262,19 +262,19 @@
                         </tr>
                        
                         <tr>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td>Very good</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Average</td>
+                          <td>Very good</td>
+                          <td>Excellent</td>
+                          <tdExcellent></td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
