--- a/PreSchool/Oladokun-Divine-Result.html
+++ b/PreSchool/Oladokun-Divine-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Oladokun Divine</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term ....2023/2024................ </p>
+                     <p>Continuous Assessment Scores for Term 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -447,10 +447,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment:An Excellent result. <br>_____________________________________________________</p>
+                    <p>Class Teachers Comment: An Excellent result. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Divine is a great students who is always excited to learn. <br></p>
 
                      &nbsp;
                      &nbsp;
