--- a/GradeTwo/Adeniba-Temiloluwa-Result.html
+++ b/GradeTwo/Adeniba-Temiloluwa-Result.html
@@ -501,10 +501,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Temiloluwa is cheerful but there is need to put in more effort.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Temiloluwa needs to take his work more seriously.<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
