--- a/GradeOne/Akinlabi-Akindesire-Result.html
+++ b/GradeOne/Akinlabi-Akindesire-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Akinlabi Akindesire</h2><br>
                      <h2> Grade One </h2>
                        <table>
-                        <p>Continuous Assessment Scores for Term 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term .................... </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
@@ -504,6 +504,13 @@
                                                   
                                                 </tr>
                                              </table>
+                                             <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                                             &nbsp;
+                                             &nbsp;
+                                             <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+
+                                             &nbsp;
+                                             &nbsp;
                     <p> Click back on browser to go back to students profile </p> 
                </div>
             </div>
