--- a/GradeTwo/Ayetuoma-Gaius-Result.html
+++ b/GradeTwo/Ayetuoma-Gaius-Result.html
@@ -178,7 +178,7 @@
                            <td>90</td>
                            <td>95</td>
                            <td>85</td>
-                           <td>Marks Obtainable</td>
+                           <td>Marks Obtained</td>
                           
                           <td>1st Half</td>
                          </tr><tr>
