--- a/GradeThree/Adaramaja-Akinbiyi-Result.html
+++ b/GradeThree/Adaramaja-Akinbiyi-Result.html
@@ -242,38 +242,38 @@
                           <td>Final Result</td>
                         </tr>
                         <tr>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td>80</td>
+                          <td>85</td>
+                          <td>87</td>
+                          <td>79</td>
+                          <td>92</td>
+                          <td>86</td>
+                          <td>96</td>
+                          <td>74</td>
+                          <td>75</td>
+                          <td>73</td>
+                          <td>94</td>
+                          <td>73</td>
+                          <td>80</td>
                           <td>Marks Obtained</td>
                           
                           <td>Final Result</td>
                         </tr>
                         
                         <tr>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td>Very Good</td>
+                          <td>Very Good</td>
+                          <td>Very Good</td>
+                          <td>Good</td>
+                          <td>Excellent</td>
+                          <td>Very Good</td>
+                          <td>Excellent</td>
+                          <td>Good</td>
+                          <td>Good</td>
+                          <td>Good</td>
+                          <td>Excellent</td>
+                          <td>Good</td>
+                          <td>Very Good</td>
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
