--- a/GradeTwo/Ayetuoma-Gaius-Result.html
+++ b/GradeTwo/Ayetuoma-Gaius-Result.html
@@ -256,19 +256,19 @@
                         </tr>
                         
                         <tr>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <tdExcellenttd>
+                          <td>Very Good</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
