--- a/GradeTwo/Ayetuoma-Gaius-Result.html
+++ b/GradeTwo/Ayetuoma-Gaius-Result.html
@@ -296,7 +296,7 @@
                                                </tr>
                                                <tr>
                                                  <td>Verbal Fluency</td>
-                                                 <td></td>
+                                                 <td>*</td>
                                                  <td></td>
                                                  <td></td>
                                                  <td></td>
@@ -305,7 +305,7 @@
                                                </tr>
                                                <tr>
                                                   <td>Reading</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -343,7 +343,7 @@
                                                </tr>
                                                <tr>
                                                  <td>Puntuality</td>
-                                                 <td></td>
+                                                 <td>*</td>
                                                  <td></td>
                                                  <td></td>
                                                  <td></td>
@@ -353,7 +353,7 @@
                                                </tr>
                                                <tr>
                                                   <td>Neatness</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -363,7 +363,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Politeness</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -373,7 +373,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Cooperation with others</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -383,7 +383,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Leadership</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -393,7 +393,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Helping others</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -403,7 +403,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Emotional Stability</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -413,7 +413,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Health</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -423,7 +423,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Attitude to class work</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -433,7 +433,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Attentiveness</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -443,7 +443,7 @@
                                                 </tr>
                                                 <tr>
                                                   <td>Perseverance</td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
@@ -498,7 +498,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment:_Good Job Gaius! Keep it up.<br>_____________________________________JJ ________________</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
