--- a/GradeTwo/Ayetuoma-Gaius-Result.html
+++ b/GradeTwo/Ayetuoma-Gaius-Result.html
@@ -498,10 +498,10 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:_Good Job Gaius! Keep it up.<br>_____________________________________JJ ________________</p>
+                                             <p>Class Teachers Comment:_Good Job Gaius! Keep it up.<br>_____________________________________________________</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment:_An Excellent Performance<br>_____________________________________________________</p>
 
                                              &nbsp;
                                              &nbsp;
