--- a/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
+++ b/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
@@ -504,10 +504,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:Mufeedah takes an active role in class<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment:A very good result<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
