--- a/GradeFive/Adefiranye-Mofiyin-Result.html
+++ b/GradeFive/Adefiranye-Mofiyin-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Adefiranye Mofiyin</h2><br>
                      <h2> Grade Five </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..................... </p>
+                        <p>Continuous Assessment Scores for Term  1st term 2023/2024 </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Mofiyin shows responsibilityand follows direction promptly<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Mofiyin shows responsibilityand follows direction promptly<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:Good performance<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Good performance<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
