Update and rename Olatunjo-Ojima-Result.html to Olatunji-Ojima-Result.html

--- a/PreSchool/Olatunji-Ojima-Result.html
+++ b/PreSchool/Olatunji-Ojima-Result.html
@@ -89,7 +89,7 @@
                
                <div class="col-md-5 order_1_mobile">
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Olatunjo Ojima</h2><br>
+                     <h2>Result for <br>Olatunji Ojima</h2><br>
                      <h2> Pre School </h2>
 
                      <p>Continuous Assessment Scores for Term .................... </p>
