Update and rename Olatunjo-Ojima.html to Olatunji-Ojima.html

--- a/PreSchool/Olatunji-Ojima.html
+++ b/PreSchool/Olatunji-Ojima.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Olatunjo<br> Ojima's<br> Portal
+                                             Olatunji<br> Ojima's<br> Portal
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href=""> Olatunjo Ojima<span></span></a>
+                                             <a class="read_more" href=""> Olatunji Ojima<span></span></a>
                                           </div>
                                        </div>
                                     </div>
@@ -201,7 +201,7 @@
                      <h3>Results</h3>
                      <p>Click read more to see results</p>
                   </div>
-                  <a class="read_more" href="Olatunjo-Ojima-Result.html">Read More</a>
+                  <a class="read_more" href="Olatunji-Ojima-Result.html">Read More</a>
                </div>
                <div class="col-md-4 margi_bottom">
                   <div class="class_box blue text_align_center">
