--- a/PreSchool/Enisemo-Tolorunnimi-Result.html
+++ b/PreSchool/Enisemo-Tolorunnimi-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage text_align_left ">
-                     <h2>Result for <br>Emisemo-Tolorunnimi</h2><br>
+                     <h2>Result for <br>Enisemo-Tolorunnimi</h2><br>
                      <h2> Pre School </h2>
 
                      <p>Continuous Assessment Scores for Term ................... </p>
