--- a/GradeThree/Adaramaja-Akinbiyi-Result.html
+++ b/GradeThree/Adaramaja-Akinbiyi-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Adaramaja Akinbiyi</h2><br>
                      <h2> Grade Three </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..................... </p>
+                        <p>Continuous Assessment Scores for Term  ....1st term 2023/2024................. </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
