--- a/GradeThree/Adetola-Toluwanimi-Result.html
+++ b/GradeThree/Adetola-Toluwanimi-Result.html
@@ -506,7 +506,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Toluwanimi needs to participate actively in the classroom </p>
+                     <p>Class Teachers Comment: Toluwanimi is improving but needs to participate actively in the classroom.. </p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: A very good result </p>
