--- a/GradeTwo/Adeniyi-Derek-Result.html
+++ b/GradeTwo/Adeniyi-Derek-Result.html
@@ -271,7 +271,7 @@
                           <td>V.Good</td>
                           <td>V.Good</td>
                           <td>V.Good</td>
-                          <td></td>
+                          <td>Marks Obtained</td>
                           <td>Teachers Remarks</td>                           
                         </tr>
                        </table>
