--- a/GradeTwo/Adeniyi-Derek-Result.html
+++ b/GradeTwo/Adeniyi-Derek-Result.html
@@ -269,7 +269,7 @@
                           <td>Good</td>
                           <td>V.Good</td>
                           <td>V.Good</td>
-                          <td>V.Good</td>
+                          <td>Good</td>
                           <td>V.Good</td>
                           <td>Marks Obtained</td>
                           <td>Teachers Remarks</td>                           
