--- a/GradeOne/Olufidipe-Obaloluwa-Result.html
+++ b/GradeOne/Olufidipe-Obaloluwa-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Olufidipe Obaloluwa</h2><br>
                      <h2> Grade One </h2>
                        <table>
-                        <p>Continuous Assessment Scores for Term .................... </p>
+                        <p>Continuous Assessment Scores for Term : 1st term 2023/2024 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
@@ -273,7 +273,7 @@
                                                   <td>Excellent</td>
                                                   <td>Excellent</td>
                                                   <td>Excellent</td>
-                                                  <td>Excellent</td>
+                                                  <td></td>
                                                   <td>Teachers Remarks</td>                           
                                                 </tr>
                                              
