--- a/GradeTwo/Adeniba-Temiloluwa-Result.html
+++ b/GradeTwo/Adeniba-Temiloluwa-Result.html
@@ -95,7 +95,7 @@
                      <h2> Grade Two </h2>
 
                      <table>
-                        <p>Continuous Assessment Scores for Term .................... </p>
+                        <p>Continuous Assessment Scores for Term  1st term 2023/2024 </p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
